--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,10 +18,35 @@
             left: 25px;
         }
 
+        .article-cover {
+            padding: 20px 20px 20px 20px;
+            border: 1px dashed #1b6d85;
+            margin-bottom: 50px;
+        }
+
+        .article-cover > .article-title {
+            color: black;
+            font-size: 30px;
+            margin-bottom: 10px;
+        }
+
+        .article-cover > .article-title :hover {
+            text-decoration: none;
+        }
+
+        .article-cover > .article-abstract {
+            font-size: 16px;
+            margin-bottom: 10px;
+            color: #9d9d9d;
+        }
     </style>
+
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="js/index_0.js"></script>
+
 </head>
 <body>
-<nav class="navbar navbar navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container-fluid">
 
         <div class="navbar-header">
@@ -31,7 +56,7 @@
         </div>
 
         <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav" id="mytabs">
+            <ul class="nav navbar-nav">
                 <li class="active"><a href="#">首页</a></li>
             </ul>
         </div>
@@ -44,6 +69,20 @@
             <div class="list-group-item">
                 <div class="list-group-item-heading">Java Web作业成果展示</div>
                 <a href="http://www.dmwqaq.cn/employee_demo">雇员管理系统</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="article-list">
+        <div class="article-cover" v-for="article in articles">
+            <a class="article-title" :href="'article/'+article.id">{{article.title}}</a>
+            <!--            .substring(0,50)-->
+            <div class="article-abstract" v-html="(article.content)"></div>
+            <div class="article-author">
+                作者：{{article.authorName}}&nbsp;&nbsp;&nbsp;&nbsp;
+                发布时间：{{new Date(article.createDatetime).toLocaleString()}}
             </div>
         </div>
     </div>
