--- a/src/main/webapp/WEB-INF/article.html
+++ b/src/main/webapp/WEB-INF/article.html
@@ -44,8 +44,8 @@
         </div>
 
         <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav" id="mytabs">
-                <li class="active"><a href="#">首页</a></li>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="/">首页</a></li>
                 <li class=""><a href="#">和我联系</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -69,7 +69,7 @@
             <div class="article">
                 <div class="article-header">
                     <div class="article-title">{{article.title}}</div>
-                    <div class="article-date">{{article.date}}</div>
+                    <div class="article-date">{{article.createDatetime}}</div>
                     <div class="article_author">{{article.authorName}}</div>
                 </div>
                 <div class="article-body" v-html="article.content"></div>
@@ -79,7 +79,7 @@
             <nav class="bs-docs-sidebar hidden-print hidden-xs hidden-sm affix" id="recent-article-list">
                 <div class="page-header">近期发表文章</div>
                 <ul class="nav bs-docs-sidenav" v-for="article in articles">
-                    <li><a :href="article.href">{{article.title}}</a></li>
+                    <li><a :href="'/article/'+article.id">{{article.title}}</a></li>
                 </ul>
             </nav>
         </div>
