发布文章后自动跳转到文章详情页

--- a/src/main/webapp/create_article.html
+++ b/src/main/webapp/create_article.html
@@ -147,7 +147,8 @@
                         authorName: "大魔王"
                     },
                     success: function (response_text) {
-                        alert("发布成功！" + response_text)
+                        alert('发布成功！');
+                        window.location = '/article/' + response_text;
                     }
                 });
             }
