--- a/src/main/webapp/WEB-INF/article.html
+++ b/src/main/webapp/WEB-INF/article.html
@@ -25,6 +25,10 @@
             position: relative;
             left: 25px;
         }
+
+        .article-body img {
+            max-width: 100%;
+        }
     </style>
 
 
