更新页面样式：顶部导航栏不再固定

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <style>
         body {
-            padding-top: 100px;
+            /*padding-top: 100px;*/
             /*background-color: rgba(250, 235, 215, 0.31);*/
         }
 
@@ -64,7 +64,7 @@
 
 </head>
 <body>
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
 
         <div class="navbar-header">
